# calc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cache.h  calculator.h  checker.h  context.h  logger.h  operation_record.h  parser.h  postgres_connection.h  postgres_result.h  printer.h  runner.h  sql.h  sql_queries.h
src/: cache.cpp  calculator.cpp  checker.cpp  logger.cpp  main.cpp  operation_record.cpp  parser.cpp  postgres_connection.cpp  postgres_result.cpp  printer.cpp  runner.cpp
tests/: test_calculator.cpp  test_checker.cpp  test_parser.cpp
